# SFML_Automata

./: CMakeLists.txt  Creature.cpp  Creature.h  Entitiymanager.cpp  Entitiymanager.h  Entitymanager.cpp  Entitymanager.h  Game.cpp  Game.h  Pictureloader.cpp  Pictureloader.h  README.MD  World.cpp  World.h  main.cpp
Util/: RandomGenerator.cpp  RandomGenerator.h
